# jekyll-academic

./: .gitignore  404.html  Gemfile  README.md  _config.yml  index.html  jekyll-academic.gemspec  package.json  pyproject.toml
.github/workflows_example/: deploy.yaml  external_resources.yaml
_data/: lattes_citation.yml  lattes_jcr.yml  member_roles.yml  navigation.yml  openalex_citation.yml  venues.yaml
_includes/: download.html  footer.html  head.html  masterhead.html  member_picture.html  member_pill.html  navbar.html  post_card_list.html  post_entry_list.html  post_paginator.html  profile_sidebar.html  publication_access_buttons.html  publication_altmetric_badge.html  publication_author.html  publication_card.html  publication_card_list.html  publication_dimensions_badge.html  publication_list.html  publication_status_badge.html  publication_venue.html  scripts.html  share_buttons.html
_layouts/: member-archive.html  member.html  page.html  post-archive.html  post.html  publication-archive.html  publication.html  reference_entry.html
_plugins/: inline_pdf.rb  publication_backrefs.rb  venue_name.rb
assets/css/: app.css
assets/js/: app.js  theme.js
content/: blog.md  landing.md  news.md
content/_members/: amferreira.md  brsilva.md  capereira.md  dmrocha.md  efsouza.md  fglima.md  gvcastro.md
content/_news/: 2026-04-03-ui-news-test-01.md  2026-04-03-ui-news-test-02.md  2026-04-03-ui-news-test-03.md
content/_pages/: members.md  people.md  publications.md
lib/: jekyll-academic.rb
lib/jekyll-academic/: md5.rb  (+3 more)
scripts/: fetch_external.py  main.py
(+9 files in other folders)
